# cv-demo

./: CMakeLists.txt  README.md
include/: easylogging++.h
src/: easylogging++.cc  main.cpp
